change in background colour and font style

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <li>
                 <div id = "dstruct">
                     <p>
-                        Algorithms & <br/> data structures
+                        Data Structures
                     </p>
                 </div>
             </li>
@@ -187,7 +187,7 @@
             <li>
                 <div id="threed">
                     <p>
-                        3D modeling
+                        3D Modeling
                     </p>
                 </div>
             </li>
@@ -218,14 +218,17 @@
 
 <style>
     body{
-        background-color: rgb(28, 110, 121);
+        background-color: rgb(0, 136, 136);
         color: rgb(207, 217, 230);
     }
+
+    /*styling and positioning the skill tokens*/
     .token li{
         list-style: none;
         display: inline-block;
         vertical-align: top;
         padding: 1.5vh;
+        padding-bottom: 3.5vh;
     }
 
     .token li div{
@@ -245,7 +248,7 @@
     }
 
 
-    
+    /*styling the heading above the skill tokens*/
     .subtitle{
         position: relative;
     }
@@ -264,6 +267,8 @@
         background-position: 2.5vh 2.5vh;
     }
 
+
+    /*add pictures to the skill tokens*/
     #java{
         background-image: url("images/java.png");
     }
@@ -339,6 +344,7 @@
         background-position: -1.5vh 1.5vh;
     }
 
+    /*set font size and font family*/
     h1 p{
         font-size: 5vh;
         text-align: center;
@@ -347,7 +353,7 @@
     }
 
     p{
-        font-family:'Courier New', Courier, monospace;
+        font-family:Arial, Helvetica, sans-serif;
     }
 </style>
 </html>
