--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
 <style>
     body{
-        background-color: rgb(0, 180, 180);
+        background-color: rgba(0, 180, 180, 0.521);
         color: rgb(207, 217, 230);
     }
 
@@ -354,6 +354,9 @@
 
     p{
         font-family:Arial, Helvetica, sans-serif;
+        color: rgb(46, 46, 46);
     }
+
+    
 </style>
 </html>
