--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
     <div class="subtitle">
     <h2>
         <p>
-        Languages:
+            <u>Languages:</u>
         </p>
     </h2>
 
-    <hr>
     </div>
 
     <ul id = "lang" class = "token">
@@ -96,11 +95,10 @@
         <div class="subtitle">
             <h2>
                 <p>
-                Platforms:
+                    <u>Platforms:</u>
                 </p>
             </h2>
         
-            <hr>
         </div>
         
             <ul id = "plat" class="token">
@@ -169,10 +167,9 @@
         <div class="subtitle">
             <h2>
                 <p>
-                    Skills:
+                    <u>Skills:</u>
                 </p>
             </h2>
-            <hr>
         </div>
 
         <ul id="skill" class="token">
