added personal summary and contact info

--- a/index.html
+++ b/index.html
@@ -12,6 +12,38 @@
     <br>
 
     <div class="subtitle">
+        <h2>
+            <p>
+                <u>Personal Summary:</u>
+            </p>
+        </h2>
+    </div>
+    <div class="textBody">
+        <p>
+            Passionate and innovative, I enjoy testing myself physically and mentally.<br/> 
+            I strive to create a strong reputation with my employers and co-workers.
+        </p>
+    </div>
+
+    <div class="subtitle">
+        <h2>
+            <p>
+                <u>Contact Information:</u>
+            </p>
+        </h2>
+    </div>
+    <div class="textBody">
+        <p>
+            Address: 1723 Kenmore road, Victoria B.C.<br/> 
+            Postal Code: V8N 2E6<br/>
+            Cell Phone: (778) 952-0509<br/>
+            Email: <a href = "mailto: wkingnumber2@gmail.com">wkingnumber2@gmail.com<br/></a>
+            GitHub: <a href = "https://github.com/wadeking98">wadeking98</a>
+            
+        </p>
+    </div>
+
+    <div class="subtitle">
     <h2>
         <p>
             <u>Languages:</u>
@@ -352,6 +384,10 @@
     p{
         font-family:Arial, Helvetica, sans-serif;
         color: rgb(46, 46, 46);
+    }
+
+    .textBody{
+        font-size: 3vh;
     }
 
 </style>
