--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
     <head>
             <script type = "text/javascript" src = "scripts/html2canvas.js"></script>
             <script type="text/javascript" src = "scripts/jspdf.js"></script>
+            <script type="text/javascript" src = "scripts/FileSaver.js"></script>
 
             <script type="text/javascript">
                 function genPdf(){
                     html2canvas(document.body).then(canvas => {
                         
-                                var img = canvas.toDataURL("image/png");
+                                //var img = canvas.toDataURL("image/png");
                                 var doc = new jsPDF();
 
-                                doc.addImage(img, 'JPEG', 20, 20);
+                                //doc.addImage(img, 'JPEG', 20, 20);
                                 doc.save("test.pdf");
                                 
 
