--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
                         
                                 var img = canvas.toDataURL("image/png");
                                 var doc = new jsPDF();
-
-                                doc.addImage(img, 'JPEG', 20, 20);
+                                doc.addPage(8,11);
+                                //doc.addImage(img, 'JPEG', 20, 20);
                                 doc.save("test.pdf");
                                 
 
