--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     var heightLeft = imgHeight;  
                 
                     const contentDataURL = canvas.toDataURL('image/png')  
-                    let pdf = new jspdf('p', 'mm', 'a4'); // A4 size page of PDF  
+                    let pdf = new jsPDF('p', 'mm', 'a4'); // A4 size page of PDF  
                     var position = 0;  
                     pdf.addImage(contentDataURL, 'PNG', 0, position, imgWidth, imgHeight)  
 
