--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
             <script type="text/javascript" src = "scripts/FileSaver.js"></script>
 
             <script type="text/javascript">
-                
+                import * as jspdf from 'scripts/jspdf.js';  
+                import * as html2canvas from "scripts/html2canvas.js";
                 function genPdf(){
                     // this generates single page
                     var data = document.getElementsByTagName('body')[0];  
@@ -18,7 +19,7 @@
                     var heightLeft = imgHeight;  
                 
                     const contentDataURL = canvas.toDataURL('image/png')  
-                    let pdf = new jsPDF('p', 'mm', 'a4'); // A4 size page of PDF  
+                    let pdf = new jspdf('p', 'mm', 'a4'); // A4 size page of PDF  
                     var position = 0;  
                     pdf.addImage(contentDataURL, 'PNG', 0, position, imgWidth, imgHeight)  
 
