added new skills and contact info

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         </div>
         <div class="textBody">
             <p>
-                Address: 1723 Kenmore road, Victoria B.C.<br/> 
-                Postal Code: V8N 2E6<br/>
+                Address: 1586 Kenmore road, Victoria B.C.<br/> 
+                Postal Code: V8N 2E3<br/>
                 Cell Phone: (778) 952-0509<br/>
                 Email: <a href = "mailto: wkingnumber2@gmail.com">wkingnumber2@gmail.com<br/></a>
                 GitHub: <a href = "https://github.com/wadeking98">wadeking98</a>
@@ -207,6 +207,22 @@
                         </div>
                     </li>
 
+                    <li>
+                        <div id="django" class="tquart">
+                            <p>
+                                Django
+                            </p>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div id="docker" class="half">
+                            <p>
+                                Docker
+                            </p>
+                        </div>
+                    </li>
+
             
                 </ul>
 
@@ -238,7 +254,7 @@
                 </li>
 
                 <li>
-                    <div id="crypt" class="half">
+                    <div id="crypt" class="tquart">
                         <p>
                             Cryptography
                         </p>
@@ -268,6 +284,46 @@
                         </p>
                     </div>
                 </li>
+
+                <li>
+                    <div id="block" class="tquart">
+                        <p>
+                            Blockchain
+                        </p>
+                    </div>
+                </li>
+
+                <li>
+                    <div id="cred" class="tquart">
+                        <p>
+                            Verifyable Credentials
+                        </p>
+                    </div>
+                </li>
+
+                <li>
+                    <div id="ai" class="tquart">
+                        <p>
+                            Artificial Intelligence
+                        </p>
+                    </div>
+                </li>
+
+                <li>
+                    <div id="deep" class="quart">
+                        <p>
+                            Deep Learning
+                        </p>
+                    </div>
+                </li>
+
+                <li>
+                    <div id="agile" class="half">
+                        <p>
+                            Agile Development
+                        </p>
+                    </div>
+                </li>
                 
             </ul>
 
@@ -284,6 +340,23 @@
                         <u>Work Experience:</u>
                     </p>
                 </h2>
+            </div>
+
+            <div class = "work-experience">
+                <p class="work-exp-title">
+                    Quartech Systems Ltd.
+                </p>
+                <p class="work-exp-date">May 2019 - Sept 2019</p>
+                <p class="work-exp-body">
+                Managed and completed a proof of concept for a web application that provides proof of <br/>
+                immunization, medication, and lab results online. The web application, called <br/> 
+                Patient Portal BC, uses verifyable credential technology and sits on top of Hyperledger Indy. <br/>
+                I was the sole person responsible for the implementation of the project. <br/>
+                Patient Portal BC is hosted on a Django web framework and uses a Vue.js frontend. <br/> 
+                User accounts are managed by the Django database and are synced with Hyperledger Indy agents. <br/>
+                The result of this project allows encrypted peer to peer communication and sharing of <br/>
+                credentials using the latest verifyable credential technology. <br/>
+                </p>
             </div>
 
 
@@ -335,7 +408,7 @@
 
             <div class= "work-experience">
                 <p class="work-exp-title">
-                        UVIC Computer Science, 3 rd Year
+                        UVIC Computer Science, 4th Year
                 </p>
                 <p class="work-exp-subtitle">
                         Virtual Reality Club
@@ -496,6 +569,10 @@
         background-image: url("images/linux.jpeg");
     }#git{
         background-image: url("images/git.png");
+    }#django{
+        background-image: url("images/django.png");
+    }#docker{
+        background-image: url("images/docker.png");
     }
 
 
@@ -515,6 +592,16 @@
         background-image: url("images/db.png");
     }#webdes{
         background-image: url("images/webdes.png");
+    }#block{
+        background-image: url("images/block.png");
+    }#cred{
+        background-image: url("images/cred.png");
+    }#ai{
+        background-image: url("images/ai.jpg");
+    }#deep{
+        background-image: url("images/deep.png");
+    }#agile{
+        background-image: url("images/agile.png");
     }
 
     /*add progress to the skill tokens*/
