--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </li>
 
             <li>
-                <div id = "cpp" class="tquart"><p>
+                <div id = "cpp" class="full"><p>
                     C/C++
                 </p></div>
             </li>
