added bash icon

--- a/index.html
+++ b/index.html
@@ -117,6 +117,12 @@
             </li>
             
             <li>
+                <div id="bash" class="half"><p>
+                    Bash
+                </p></div>
+            </li>
+            
+            <li>
                 <div id = "ard" class="half"><p>
                     Arduino
                 </p></div>
@@ -547,6 +553,8 @@
         background-image: url("images/ard.png");
     }#avr{
         background-image: url("images/avr.svg");
+    }#bash{
+        background-image: url("images/bashicon.webp");
     }
 
 
