added postgres skill

--- a/index.html
+++ b/index.html
@@ -103,6 +103,12 @@
                     MySQL
                 </p></div>
             </li>
+            
+            <li>
+                <div id = "postgres" class="tquart"><p>
+                    PostgreSQL
+                </p></div>
+            </li>
 
             <li>
                 <div id="css" class="full"><p>
@@ -555,7 +561,8 @@
         background-image: url("images/avr.svg");
     }#bash{
         background-image: url("images/bashicon.webp");
-    }
+    }#postgres{
+        background-image: url("images/postgresicon.jpg");
 
 
     #unity{
