--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
     }#bash{
         background-image: url("images/bashicon.webp");
     }#postgres{
-        background-image: url("images/postgresicon.jpg");
+        background-image: url("images/postgresicon.png");
     }
 
     #unity{
